--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>This is a Header</h1>
     <p>This is first p</p>
     <p>This is second p</p>
+    <p>Test commit to github</p>
 </body>
 
 </html>
