--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <p>This is first p</p>
     <p>This is second p</p>
     <p>Test commit to github</p>
+    <p>test p for Node modules</p>
 </body>
 
 </html>
